added a new comment

--- a/src/main/resources/il/ac/haifa/cs/sweng/HelloGit/about_dialog.fxml
+++ b/src/main/resources/il/ac/haifa/cs/sweng/HelloGit/about_dialog.fxml
@@ -29,7 +29,7 @@
 	</Label>
 	<Label alignment="CENTER"
 		   maxWidth="2.7976931348623157E308"
-		   text="Hi i am Haya !"
+		   text="Hi i am Haya !!!"
 		   textAlignment="CENTER"
 		   VBox.vgrow="ALWAYS">
 		<font>
